--- a/ParkTerritories.WebService/appsettings.json
+++ b/ParkTerritories.WebService/appsettings.json
@@ -5,7 +5,7 @@
         "Url": "http://0.0.0.0:80"
       },
       "Https": {
-        "Url": "http://0.0.0.0:443"
+        "Url": "https://0.0.0.0:443"
       }
     }
   },
